--- a/presentation_report/literature/bibSTA490.bib
+++ b/presentation_report/literature/bibSTA490.bib
@@ -322,3 +322,67 @@ year = {2023}
 
 
 
+@article{hoogland2021,
+author = {Hoogland, Jeroen and IntHout, Joanna and Belias, Michail and Rovers, Maroeska M. and Riley, Richard D. and E. Harrell Jr, Frank and Moons, Karel G. M. and Debray, Thomas P. A. and Reitsma, Johannes B.},
+title = {A tutorial on individualized treatment effect prediction from randomized trials with a binary endpoint},
+journal = {Statistics in Medicine},
+volume = {40},
+number = {26},
+pages = {5961-5981},
+keywords = {causal inference, personalized medicine, prediction, regression, treatment effect},
+doi = {https://doi.org/10.1002/sim.9154},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.9154},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.9154},
+abstract = {Randomized trials typically estimate average relative treatment effects, but decisions on the benefit of a treatment are possibly better informed by more individualized predictions of the absolute treatment effect. In case of a binary outcome, these predictions of absolute individualized treatment effect require knowledge of the individual's risk without treatment and incorporation of a possibly differential treatment effect (ie, varying with patient characteristics). In this article, we lay out the causal structure of individualized treatment effect in terms of potential outcomes and describe the required assumptions that underlie a causal interpretation of its prediction. Subsequently, we describe regression models and model estimation techniques that can be used to move from average to more individualized treatment effect predictions. We focus mainly on logistic regression-based methods that are both well-known and naturally provide the required probabilistic estimates. We incorporate key components from both causal inference and prediction research to arrive at individualized treatment effect predictions. While the separate components are well known, their successful amalgamation is very much an ongoing field of research. We cut the problem down to its essentials in the setting of a randomized trial, discuss the importance of a clear definition of the estimand of interest, provide insight into the required assumptions, and give guidance with respect to modeling and estimation options. Simulated data illustrate the potential of different modeling options across scenarios that vary both average treatment effect and treatment effect heterogeneity. Two applied examples illustrate individualized treatment effect prediction in randomized trial data.},
+year = {2021}
+}
+
+
+@article{holland1986,
+ ISSN = {01621459, 1537274X},
+ URL = {http://www.jstor.org/stable/2289064},
+ abstract = {Problems involving causal inference have dogged at the heels of statistics since its earliest days. Correlation does not imply causation, and yet causal conclusions drawn from a carefully designed experiment are often valid. What can a statistical model say about causation? This question is addressed by using a particular model for causal inference (Holland and Rubin 1983; Rubin 1974) to critique the discussions of other writers on causation and causal inference. These include selected philosophers, medical researchers, statisticians, econometricians, and proponents of causal modeling.},
+ author = {Paul W. Holland},
+ journal = {Journal of the American Statistical Association},
+ number = {396},
+ pages = {945--960},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {Statistics and Causal Inference},
+ urldate = {2025-07-05},
+ volume = {81},
+ year = {1986}
+}
+
+
+
+
+@article{rubin2005,
+ ISSN = {01621459},
+ URL = {http://www.jstor.org/stable/27590541},
+ abstract = {Causal effects are defined as comparisons of potential outcomes under different treatments on a common set of units. Observed values of the potential outcomes are revealed by the assignment mechanism - a probabilistic model for the treatment each unit receives as a function of covariates and potential outcomes. Fisher made tremendous contributions to causal inference through his work on the design of randomized experiments, but the potential outcomes perspective applies to other complex experiments and nonrandomized studies as well. As noted by Kempthorne in his 1976 discussion of Savage's Fisher lecture, Fisher never bridged his work on experimental design and his work on parametric modeling, a bridge that appears nearly automatic with an appropriate view of the potential outcomes framework, where the potential outcomes and covariates are given a Bayesian distribution to complete the model specification. Also, this framework crisply separates scientific inference for causal effects and decisions based on such inference, a distinction evident in Fisher's discussion of tests of significance versus tests in an accept/reject framework. But Fisher never used the potential outcomes framework, originally proposed by Neyman in the context of randomized experiments, and as a result he provided generally flawed advice concerning the use of the analysis of covariance to adjust for posttreatment concomitants in randomized trials.},
+ author = {Donald B. Rubin},
+ journal = {Journal of the American Statistical Association},
+ number = {469},
+ pages = {322--331},
+ publisher = {[American Statistical Association, Taylor \& Francis, Ltd.]},
+ title = {Causal Inference Using Potential Outcomes: Design, Modeling, Decisions},
+ urldate = {2025-07-05},
+ volume = {100},
+ year = {2005}
+}
+
+
+
+@book{pearl_book2009,
+author = {Pearl, Judea},
+title = {Causality: Models, Reasoning and Inference},
+year = {2009},
+isbn = {052189560X},
+publisher = {Cambridge University Press},
+address = {USA},
+edition = {2nd},
+abstract = {Written by one of the preeminent researchers in the field, this book provides a comprehensive exposition of modern analysis of causation. It shows how causality has grown from a nebulous concept into a mathematical theory with significant applications in the fields of statistics, artificial intelligence, economics, philosophy, cognitive science, and the health and social sciences. Judea Pearl presents and unifies the probabilistic, manipulative, counterfactual, and structural approaches to causation and devises simple mathematical tools for studying the relationships between causal connections and statistical associations. The book will open the way for including causal analysis in the standard curricula of statistics, artificial intelligence, business, epidemiology, social sciences, and economics. Students in these fields will find natural models, simple inferential procedures, and precise mathematical definitions of causal concepts that traditional texts have evaded or made unduly complicated. The first edition of Causality has led to a paradigmatic change in the way that causality is treated in statistics, philosophy, computer science, social science, and economics. Cited in more than 3,000 scientific publications, it continues to liberate scientists from the traditional molds of statistical thinking. In this revised edition, Judea Pearl elucidates thorny issues, answers readers' questions, and offers a panoramic view of recent advances in this field of research. Causality will be of interests to students and professionals in a wide variety of fields. Anyone who wishes to elucidate meaningful relationships from data, predict effects of actions and policies, assess explanations of reported events, or form theories of causal understanding and causal speech will find this book stimulating and invaluable.}
+}
+
+
+
